--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -87,6 +87,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
     <div th:replace="~{fragments/common :: scripts}"></div>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="/js/flatpickr-config.js"></script>
     <script src="/js/multi-step-form.js"></script>
     <script src="/js/schedule-form.js"></script>
 
