Improve front-facing interface, replaced progress bar with stepped one.

--- a/src/main/resources/templates/fragments/form-components.html
+++ b/src/main/resources/templates/fragments/form-components.html
@@ -9,15 +9,18 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <body>
 
-    <div th:fragment="form-progress-bar(totalSteps)">
-        <div class="progress mb-4" style="height: 10px;">
-            <div id="progressBar" class="progress-bar" role="progressbar" th:style="'width: ' + (100.0 / ${totalSteps}) + '%;'" th:aria-valuenow="(100.0 / ${totalSteps})" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+    <div th:fragment="form-progress-bar(totalSteps, stepLabels)">
+        <ol class="step-progress-bar">
+            <li th:each="i : ${#numbers.sequence(1, totalSteps)}" 
+                class="step-progress-item" 
+                th:classappend="${i == 1} ? 'is-current' : ''">
+                <span class="step-progress-label" th:text="${stepLabels[i-1]}"></span>
+            </li>
+        </ol>
     </div>
 
     <div th:fragment="form-step-info">
         <div class="form-step active" id="step-1">
-            <h5 class="mb-4 text-center">Step 1: Your Information</h5>
             <div class="form-floating mb-3">
                 <input type="text" class="form-control" id="name" th:field="*{name}" placeholder="Name" required>
                 <label for="name">Name</label>
