--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -12,20 +12,19 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
     <div class="main-content">
         <div class="container content-container">
             <div class="content-card">
-                <div class="text-center mb-4">
-                    <h1 class="">Schedule a Session</h1>
+                <div class="text-center mb-5">
+                    <h1 class="fw-bold">Schedule a Session</h1>
                     <p class="text-muted">Choose a time that feels right. We are here to support you.</p>
                 </div>
 
                 <div id="validation-alert" class="alert alert-danger d-none mb-4" role="alert"></div>
                 <form id="appointmentForm" th:action="@{/schedule}" th:object="${appointment}" method="post" novalidate>
                     
-                    <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=3)}"></div>
+                    <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=3, stepLabels=${ {'Info', 'Details', 'Review'} } )}"></div>
 
                     <div th:replace="~{fragments/form-components :: form-step-info}"></div>
 
                     <div class="form-step" id="step-2" style="display: none;">
-                        <h5 class="mb-4 text-center">Step 2: Appointment Details</h5>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-floating mb-3">
@@ -56,7 +55,6 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                     </div>
 
                     <div class="form-step" id="step-3" style="display: none;">
-                        <h5 class="mb-4 text-center">Step 3: Review & Confirm</h5>
                         <div class="mb-3">
                             <p class="text-muted mb-0">Name</p>
                             <p id="review-name"></p>
