--- a/src/main/resources/templates/fragments/confirmation-modal.html
+++ b/src/main/resources/templates/fragments/confirmation-modal.html
@@ -4,11 +4,11 @@ License, v. 2.0. If a copy of the MPL was not distributed with this
 file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 -->
 
-<div class="modal fade" id="confirmationModal" tabindex="-1" aria-labelledby="confirmationModalLabel" aria-hidden="true" th:fragment="confirmation-modal(modalId, title, text, confirmButtonText, formId)">
+<div class="modal fade" th:id="${modalId}" tabindex="-1" th:aria-labelledby="${modalId} + 'Label'" aria-hidden="true" th:fragment="confirmation-modal(modalId, title, text, confirmButtonText, formId)">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="confirmationModalLabel" th:text="${title}">Confirmation</h5>
+                <h5 class="modal-title" th:id="${modalId} + 'Label'" th:text="${title}">Confirmation</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -16,7 +16,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" th:text="${confirmButtonText}" th:attr="onclick=|submitConfirmationForm('${formId}')|">Confirm</button>
+                <button type="button" class="btn btn-primary" th:text="${confirmButtonText}" th:attr="onclick=|submitConfirmationForm('${formId}', '${modalId}')|">Confirm</button>
             </div>
         </div>
     </div>
