--- a/src/main/resources/templates/fragments/reschedule-modal.html
+++ b/src/main/resources/templates/fragments/reschedule-modal.html
@@ -39,7 +39,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn btn-primary" form="reschedule-form">Reschedule</button>
+                <button type="button" class="btn btn-primary" onclick="submitConfirmationForm('reschedule-form', 'rescheduleModal')">Reschedule</button>
             </div>
         </div>
     </div>
