--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -23,7 +23,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
                 <div id="validation-alert" class="alert alert-danger d-none mb-4" role="alert"></div>
                 <form id="reportForm" th:action="@{/submit-report}" th:object="${report}" method="post" enctype="multipart/form-data" novalidate>
                     
-                    <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=4, stepLabels=${ {'Info', 'Details', 'Evidence', 'Review'} } )}"></div>
+                    <div th:replace="~{fragments/form-components :: form-progress-bar(totalSteps=4, stepLabels=${ {'Info', 'Details', 'Proof', 'Review'} } )}"></div>
 
                     <div th:replace="~{fragments/form-components :: form-step-info}"></div>
 
