--- a/src/main/resources/templates/fragments/admin-common.html
+++ b/src/main/resources/templates/fragments/admin-common.html
@@ -5,8 +5,8 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 -->
 <head th:fragment="head(title)" xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title th:text="${title}">Admin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title th:text="${title}">SafePoint Dashboard</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
