--- a/src/main/resources/templates/fragments/common.html
+++ b/src/main/resources/templates/fragments/common.html
@@ -6,7 +6,7 @@ file, You can obtain one at https://www.mozilla.org/MPL/2.0/.
 
 <head th:fragment="head(title)" xmlns:th="http://www.thymeleaf.org">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title th:text="${title}">SafePoint</title>
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link rel="manifest" href="/manifest.json">
